  by a tailable file.  This was handled correctly when inotify was available,
  and is now handled correctly in all cases.
  [bug introduced in fileutils-4.0h]

  tail -f - 'untailable file' will now terminate when there is no more data
  to read from stdin.  Previously it behaved as if --retry was specified.
  [This bug was present in "the beginning".]

  yes now handles short writes, rather than assuming all writes complete.
  [bug introduced in coreutils-8.24]

** Changes in behavior

  rm no longer accepts shortened variants of the --no-preserve-root option.

  seq no longer accepts 0 value as increment, and now also rejects NaN
  values for any argument.

  stat now outputs nanosecond information for time stamps even if
  they are out of localtime range.

  sort, tail, and uniq now support traditional usage like 'sort +2'
  and 'tail +10' on systems conforming to POSIX 1003.1-2008 and later.
  The 2008 edition of POSIX dropped the requirement that arguments
  like '+2' must be treated as file names.

** Improvements

  df now filters the system mount list more efficiently, with 20000
  mount entries now being processed in about 1.1s compared to 1.7s.

  install -Z now also sets the default SELinux context for created directories.

  ls is now fully responsive to signals until the first escape sequence is
  written to a terminal.

  stat and tail now know about "prl_fs" (a parallels file system),
  "m1fs" (a Plexistor file system), "wslfs" (Windows Subsystem for Linux),
  and "smb2".  stat -f --format=%T now reports the file system type, and
  tail -f uses polling for "prl_fs" and "smb2", inotify for "m1fs",
  and attempts inotify for "wslfs".

  stat --format=%N for quoting file names now honors the
  same QUOTING_STYLE environment variable values as ls.

** New Features

  date now accepts the --debug option, to annotate the parsed date string,
  display timezone information, and warn about potential misuse.
